--- a/README
+++ b/README
@@ -9,7 +9,6 @@ This script is designed to automate the process of exporting Google Ads data, sp
 
 #### Prerequisites
 - Access to a Google Ads account with active campaigns.
-- A Google Cloud Project with the Google Sheets API enabled.
 - Basic familiarity with Google Apps Script.
 
 #### Configuration Steps
@@ -18,25 +17,25 @@ This script is designed to automate the process of exporting Google Ads data, sp
    - Copy the Spreadsheet URL.
    
 2. **Script Configuration**:
-   - Open the Google Apps Script editor linked to your Google Spreadsheet.
    - Paste the provided script into the script editor.
    - In the `config` object at the top of the script:
-     - Set `LOG` to `true` or `false` based on your preference for logging.
+     - Set `clientCode` to add a specific name to the Google Spreadsheet.
      - Replace the `SPREADSHEET_URL` with the URL of your Google Spreadsheet.
      - Ensure `SHEET_NAME` contains the names of the sheets where you want to export the data.
+     - You can add specific dates in 'fromDate' & 'toDate', and change the default NumberOfDays.
 
 3. **Google Ads API Authorization**:
    - The first time you run the script, you will be prompted to authorize it to access your Google Ads data and Google Sheets.
 
 ### Usage
 Run the `main` function within the Google Apps Script editor. The script will automatically:
-- Calculate the date range for the past two months.
+- Calculate the date range for given dates or the last 90 days by default
 - Set up queries to fetch data from Google Ads.
 - Export the fetched data into the specified sheets in your Google Spreadsheet.
 
 ### Troubleshooting
 If you encounter any errors:
-- Ensure that the Google Ads account has Responsive Search Ads and relevant assets.
+- Ensure that the Google Ads account has active Responsive Search Ads and relevant assets.
 - Check if the Google Sheets URL in the `config` is correct.
 - Verify that you have the necessary permissions to access the Google Ads account and Google Spreadsheet.
 
